"More gap is coming on resource metadata issue fixed for mobile devices."

--- a/src/main/java/org/ednovo/gooru/client/mvp/play/resource/style/playertablet.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/play/resource/style/playertablet.css
@@ -29,7 +29,9 @@
 	border-bottom: 1px solid #ddd;
 	position: relative;
 }
-.whitebg{}
+.whitebg{
+	padding-top: 0px;
+}
 .navigationWrapper{}
 .animationWrapper{}
 
